logs/ping-sweep.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ping_sweep'...
Listing './lib/python3.5/site-packages/ping_sweep/dpkt'...
Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/aim.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/aim.py", line 22
    raise dpkt.NeedData, '%d left, %d needed' % (len(self.data), self.len)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/bgp.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/bgp.py", line 51
    NO_EXPORT			= 0xffffff01L
             			            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/crc32c.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/crc32c.py", line 9
    0x00000000L, 0xF26B8303L, 0xE13B70F7L, 0x1350F3F4L, 0xC79A971FL,
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/dhcp.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/dhcp.py", line 102
    ('xid', 'I', 0xdeadbeefL),
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/dns.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/dns.py", line 304
    dns.ns[1].ttl == 3382L and
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/dpkt.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/dpkt.py", line 117
    except struct.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ping_sweep/dpkt/examples'...
Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/examples/dnsping.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/examples/dnsping.py", line 39
    print 'DNSPING %s:' % opts.ip,
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/examples/nbtping.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/examples/nbtping.py", line 26
    print 'NBTPING %s:' % opts.ip
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/examples/ping.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/examples/ping.py", line 63
    print '\n--- %s ping statistics ---' % opts.ip
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/gzip.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/gzip.py", line 117
    print `gz`, `gz.decompress()`
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/ieee80211.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/ieee80211.py", line 241
    print "Key error:", self.type, self.subtype
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/ip.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/ip.py", line 56
    raise dpkt.UnpackError, 'invalid header length'
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/ip6.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/ip6.py", line 9
    ('v_fc_flow', 'I', 0x60000000L),
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/netbios.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/netbios.py", line 80
    def node_to_service_name((name, service, flags)):
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/pcap.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/pcap.py", line 8
    TCPDUMP_MAGIC = 0xa1b2c3d4L
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/pmap.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/pmap.py", line 7
    PMAP_PROG = 100000L
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/ppp.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/ppp.py", line 47
    except struct.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/rpc.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/rpc.py", line 142
    raise dpkt.UnpackError, 'invalid XDR list'
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/sccp.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/sccp.py", line 117
    ('softkey_map', 'I', 0xffffffffL)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/sctp.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/sctp.py", line 51
    s = crc32c.add(0xffffffffL, self.pack_hdr())
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/snoop.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/snoop.py", line 10
    SNOOP_MAGIC = 0x736E6F6F70000000L
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/tcp.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/tcp.py", line 24
    ('seq', 'I', 0xdeadbeefL),
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ping_sweep/dpkt/tests'...
Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/tests/test-perf.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/tests/test-perf.py", line 54
    print 'dpkt:', cnt / (time.time() - start), 'pps'
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ping_sweep/dpkt/tests/test-perf2.py'...
***   File "./lib/python3.5/site-packages/ping_sweep/dpkt/tests/test-perf2.py", line 12
    print self.rounds / (time.time() - self.start), 'rounds/s'
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ping_sweep-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
